app/src/main/java/com/example/practice_app/BindingActivity.kt
package com.example.practice_app

import androidx.appcompat.app.AppCompatActivity
import android.os.Bundle

class BindingActivity : AppCompatActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_binding)
        //error
        //test
        //test2
    }
}